Jeu_de_tests/correct/read_and_print.tpc

int main(void) {
    int a;
    char b;
    
    print(-1234);
    print(1234);
    print('a');
    
    reade(a);
    readc(b);
    
    print(a);
    print(b);
    
    return 0;
}
