Jeu_de_tests/error/conversion_problems.tpc
int main(void) {
    int a, *b;
    char c, *d;
    a = 1;
    c = 'a';
    
    d = c;
    c = d;
    b = a;
    a = b;
    
    return 0;
}
